sw/source/uibase/utlui/content.cxx
@@ -3997,7 +3997,13 @@ void SwContentTree::UpdateTracking()
                             while (!weld::IsEntryVisible(*m_xTreeView, *xIter))
                                 m_xTreeView->iter_parent(*xIter);
                         }
+                        // Assure the scroll to row is collapsed after scrolling if it was collapsed
+                        // before. This is required here to make gtkinst scroll_to_row behave like
+                        // salinst.
+                        const bool bRowExpanded = m_xTreeView->get_row_expanded(*xIter);
                         m_xTreeView->scroll_to_row(*xIter);
+                        if (!bRowExpanded)
+                            m_xTreeView->collapse_row(*xIter);
                     }
                     bRet = true;
                 }
